# mcp-neo4j-query-optimizer

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  setup.py
docs/: API_DOCS.md  INSTALL.md
examples/: env.example  mcp-neo4j-query-optimizer.json  structured_data_examples.md
src/mcp_neo4j_optimizer/: __init__.py  agent.py
tests/: conftest.py  test_agent.py  test_analyzer.py  test_mcp_tools.py
