[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-neo4j-query-optimizer"
version = "0.1.0"
description = "MCP Server for Neo4j Query Optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "neo4j", "query-optimization", "cypher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-neo4j-query-optimizer = "mcp_neo4j_optimizer.agent:main"

[project.urls]
Homepage = "https://github.com/your-username/mcp-neo4j-query-optimizer"
Repository = "https://github.com/your-username/mcp-neo4j-query-optimizer"
Issues = "https://github.com/your-username/mcp-neo4j-query-optimizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 